# iCraft

./: .gitignore  ARCHITECTURE.md  Cargo.toml  progress.md  settings.txt  track.md
plans/: progress.md
plans/implementation/: 01_render_optimization.md  02_multiplayer_smoothing.md  03_creative_flight.md  04_player_placement_collision.md  05_torch_model.md  06_survival_combat.md  07_weather_volume.md  08_creative_inventory.md  09_inventory_camera_lock.md
plans/p0/: 01_multi_chunk.md  02_block_types_textures.md  03_lighting.md  04_skybox_fog.md  05_hotbar.md  README.md
plans/p1/: 06_inventory_crafting.md  07_tools_durability.md  08_health_hunger.md  09_day_night_cycle.md  10_hostile_mobs.md  11_caves_ores.md  12_audio.md  README.md
plans/p2/: 13_fluid_simulation.md  14_passive_mobs.md  15_trees_biomes.md  16_save_load.md  17_sprint_sneak.md  18_particles.md  19_f3_debug.md  20_ambient_occlusion.md  README.md
plans/p3/: 21_enchanting_brewing.md  22_redstone.md  23_weather.md  24_main_menu.md  25_multiplayer.md  26_dimensions_bosses.md  28_advancements.md  29_resource_packs.md  30_render_optimization.md  README.md
src/: advancements.rs  app.rs  audio.rs  boss.rs  brewing.rs  camera.rs  chunk_manager.rs  chunk_render.rs  crafting.rs  dimension.rs  enchantment.rs  entity.rs  fluid.rs  hand_renderer.rs  interaction.rs  inventory.rs  lighting.rs  main.rs  menu.rs  mob.rs  mob_renderer.rs  particles.rs  passive_mob.rs  physics.rs  player.rs  redstone.rs  save.rs  shader.wgsl  state.rs  texture.rs  weather.rs  world.rs
tests/: passive_mob_tests.rs
(+54 files in other folders)
