[package]
name = "icraft"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "0.19"
glam = "0.25"
noise = "0.8"
image = "0.24"
pollster = "0.3"
indexmap = "=2.2.6"
exr = "=1.71.0"
half = "=2.2.1"
rayon = "=1.10.0"
rayon-core = "=1.12.1"
unicode-segmentation = "=1.12.0"
bytemuck = { version = "1.16", features = ["derive"] }
rodio = "0.19"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"

